--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/loginreg
-spring.datasource.username=root
-spring.datasource.password=admin123
+spring.datasource.url=jdbc:mysql://fundoo.cephewv5u3gz.ap-south-1.rds.amazonaws.com:3306/loginreg
+spring.datasource.username=fundoo
+spring.datasource.password=fundoo123
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
