--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=pritishinde34@gmail.com
-spring.mail.password=9623946752
+spring.mail.username=snehgaik11@gmail.com
+spring.mail.password=Snehal@1196
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
